# questcart

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: Button.tsx  Card.tsx  ImageUploader.tsx  Layout.tsx  Navbar.tsx
client/src/pages/: CreateExamPage.tsx  ExamDetailPage.tsx  ExamListPage.tsx  HomePage.tsx  SectionQuestionsPage.tsx
client/src/services/: api.ts  examService.ts  questionService.ts
client/src/types/: index.ts
client/src/utils/: questionUtils.ts
server/: .env.example  .gitignore  README.md  main.py  pyproject.toml  qpgen.code-workspace  requirements.txt
server/app/: __init__.py
server/app/core/: config.py  database.py
server/app/models/: models.py
server/app/repositories/: exam_repository.py  question_repository.py
server/app/routes/: exam_routes.py
server/app/schemas/: schemas.py
server/app/services/: gemini_service.py  question_service.py  section_service.py
server/app/utils/: azure_storage_utils.py  firebase_utils.py  helpers.py
