[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "cachecontrol>=0.14.3",
    "cachetools>=5.5.2",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "firebase-admin>=7.1.0",
    "google-api-core>=2.25.1",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.3.0",
    "google-crc32c>=1.7.1",
    "google-genai>=1.31.0",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.4",
    "grpcio>=1.74.0",
    "grpcio-status>=1.74.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "idna>=3.10",
    "msgpack>=1.1.1",
    "mysql-connector-python>=9.4.0",
    "proto-plus>=1.26.1",
    "protobuf>=6.32.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyjwt>=2.10.1",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "uritemplate>=4.2.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
